--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Tinta Preta">
         <meta name="author" content="">
         <title>Noel Rosa | Tinta Preta</title>
-        <link href='http://fonts.googleapis.com/css?family=Chelsea+Market' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="css/custom.css">
     </head>
     <body>
 
