--- a/index.html
+++ b/index.html
@@ -8,8 +8,18 @@
         <meta name="author" content="">
         <title>Noel Rosa | Tinta Preta</title>
         <link rel="stylesheet" href="css/custom.css">
+        <link rel="stylesheet" href="fonts/font.css">
     </head>
     <body>
+
+      <nav class="menu-navigation-basic" >
+       <ul>
+         <li><a href="#projeto" id="t" class="">Projeto</a></li>
+         <li><a href="#playlist">Playlist</a></li>
+         <li><a href="#tintapreta">Tinta Preta</a></li>
+         <li><a href="#contato">Contato</a></li>
+       </ul>
+     </nav>
 
         <div class="player">
             <p class="">
