--- a/index.html
+++ b/index.html
@@ -14,12 +14,22 @@
 
       <nav class="menu-navigation-basic" >
        <ul>
-         <li><a href="#projeto" id="t" class="">Projeto</a></li>
+
+         <li><a href="#">
+         <img class="img-brand" src="./img/Noel-Logo.svg" alt="Tinta Preta">
+         </a></li>
+         <li><a href="#" class="">Projeto</a></li>
          <li><a href="#playlist">Playlist</a></li>
          <li><a href="#tintapreta">Tinta Preta</a></li>
          <li><a href="#contato">Contato</a></li>
+
+
        </ul>
+
+
      </nav>
+
+
 
         <div class="player">
             <p class="">
