--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
          <li><a href="#">
          <img class="img-brand" src="./img/Noel-Logo.svg" alt="Tinta Preta">
          </a></li>
-         <li><a href="#" class="">Projeto</a></li>
+         <li><a href="#projeto" class="">Projeto</a></li>
          <li><a href="#playlist">Playlist</a></li>
          <li><a href="#tintapreta">Tinta Preta</a></li>
          <li><a href="#contato">Contato</a></li>
@@ -55,6 +55,11 @@
             <li><a href="#">Música 002</a></li>
           </ul>
         </div>
+
+
+    
+
+    </section>
 
         <script type="text/javascript" src="js/tintapreta.js"></script>
     </body>
