adicionada funcoes ao player

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="player">
             <p class="">
               <img src="http://lorempixel.com/100/100/" alt="">
-              Música 001 - Noel Rosa
+              <p id="nome-musica"></p>
               <span id="duration"></span>
             </p>
             <p>
@@ -49,15 +49,20 @@
             Your browser does not support the audio element.
         </audio>
 
-        <div class="">
+        <div class="" style="height:140px; width: 600px; overflow-y: scroll;">
           <ul>
-            <li><a href="#">Música 001</a></li>
-            <li><a href="#">Música 002</a></li>
+            <li><a href="#" onclick="loadMusic(0);playMusic();">(>) Música 001</a></li>
+            <li><a href="#" onclick="loadMusic(1);playMusic();">(>) Música 002</a></li>
+            <li><a href="#" onclick="loadMusic(2);playMusic();">(>) Música 003</a></li>
+            <li><a href="#" onclick="loadMusic(3);playMusic();">(>) Música 004</a></li>
+            <li><a href="#" onclick="loadMusic(4);playMusic();">(>) Música 005</a></li>
+            <li><a href="#" onclick="loadMusic(5);playMusic();">(>) Música 006</a></li>
+            <li><a href="#" onclick="loadMusic(6);playMusic();">(>) Música 007</a></li>
           </ul>
         </div>
 
 
-    
+
 
     </section>
 
