mudancas na aparencia

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   <span id="nome-musica"></span> - <span id="artista"></span>
                 </div>
                 <div class="">
-                    <canvas id="canvas" width="500" height="20">
+                    <canvas id="canvas" width="500px" height="12px">
                         canvas not supported
                     </canvas>
                 </div>
@@ -44,10 +44,10 @@
                     <source id="file-mp3" src="" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
-                <div class="list-music">
-                  <ul id="playlist">
-                  </ul>
-                </div>
+            </div>
+            <div class="list-music">
+              <ul id="playlist">
+              </ul>
             </div>
         </section>
 
