implementacao do botoes do player

--- a/index.html
+++ b/index.html
@@ -86,10 +86,11 @@
                     <button class="botao material-icons" type="button" name="button" id="previous-music">skip_previous</button>
                     <button class="botao material-icons" type="button" name="button" id="play-pause">play_arrow</button>
                     <button class="botao material-icons" type="button" name="button" id="next-music">skip_next</button>
-                    <button class="botao material-icons" type="button" name="button" id="random-music">shuffle</button>
-                    <button class="botao material-icons" type="button" name="button" id="download-music">file_download</button>
+                    <button class="botao material-icons" type="button" name="button" id="shuffle-music">shuffle</button>
+                    <button class="botao material-icons" type="button" name="button" id="volume-off">volume_off</button>
+                    <a href="" download="" class="botao material-icons" type="button" id="download-music">file_download</a>
                 </div>
-                <audio id="player">
+                <audio id="player" controls>
                     <source id="file-mp3" src="" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
