--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     Your browser does not support the audio element.
                 </audio>
             </div>
-            <div class="list-music" id="playlist">
+            <div class="list-music style-2" id="playlist">
 
             </div>
         </section>
