--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
                     <button class="botao material-icons" type="button" name="button" id="volume-off">volume_off</button>
                     <a href="" download="" class="botao material-icons" type="button" id="download-music">file_download</a>
                 </div>
-                <audio id="player" controls>
+                <audio id="player">
                     <source id="file-mp3" src="" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
-            <div class="list-music style-2" id="playlist">
+            <div class="list-music scrollbar" id="playlist">
 
             </div>
         </section>
