acertos na aparencia e capas do album

--- a/index.html
+++ b/index.html
@@ -63,14 +63,12 @@
         </div>
     </div>
 
-      <div class="playlist">
-        <section class="player-list">
-          <div class="">
+      <div class="content playlist">
+          <div class="player-list">
               <h2>Playlist</h2>
-          </div>
             <div class="player">
                 <div class="teste">
-                  <img src="http://lorempixel.com/120/120/" class="capa" alt="">
+                  <img src="" class="capa" id="capa-album" alt="">
                   <div class="titulo">
                     <span id="nome-musica"></span> - <span id="artista"></span>
                   </div>
@@ -95,8 +93,33 @@
                 </audio>
             </div>
             <div class="list-music scrollbar" id="playlist"></div>
-        </section>
+        </div>
     </div>
+
+    <div class="content sobre">
+        <div class="texto-sobre">
+            <h2>Tinta Preta</h2>
+            <p>
+                Tinta Preta estúdio criativo, é uma equipe de alunos do terceiro
+                semestre do curso de Design Gráfico, da Faculdade das Américas (FAM), 2017/01.
+            </p>
+            <p>Composto por:</p>
+            <ul>
+                <li>Alicia Marina</li>
+                <li>Jessica Barreto</li>
+                <li>Juliane Barros</li>
+                <li>Luciana Ruriko</li>
+                <li>Valter Ferrari</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="content contato">
+        <div class="">
+            <p>artetintapreta@gmail.com</p>
+        </div>
+    </div>
+
 
 
         <script type="text/javascript" src="js/tintapreta.js"></script>
